<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- sub title strings -->
    <string name="sub_title_label">Label: </string>
    <string name="sub_title_data">data</string>

    <string name="hello">Hello World, ProjectSensorActivity!</string>
    <string name="app_name">Chariot Gauge</string>
    <string name="test_text">0.00</string>
    <string name="volts">Volts</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Dashboard Strings -->
    <string name="logo_string">Demo</string>
    <string name="about_string">About</string>
    <string name="home_string">Home</string>
    <string name="search_string">Search</string>
    <string name="connect_title">Connections</string>
    <string name="settings_title">Settings</string>
    <string name="tps_title">Custom</string>
    <string name="boost_title">Boost</string>
    <string name="oil_title">Oil Pressure</string>
    <string name="wideband_title">Wideband O2</string>
    <string name="temperature_title">Temperature</string>
    <string name="custom_multi_1">Dual Gauge</string>
    <string name="custom_multi_2">Quad Gauge</string>
    <string name="rpm_title">RPM Gauge</string>
    <string name="reset_button">Reset Max</string>
    <string name="max_button">Display Max</string>
    <string name="speed_title">Speedometer</string>
    <string name="volt_title">Voltage</string>

    <!-- Whats New String -->
    <string name="whats_new">        The Chariot Gauge controller is now for sale! \n\n
        Please visit: https://www.chariotgauge.com/ \n\n
        
        Feb-21-2015: \n
        	-Fixed gauge display for lollipop. \n\n
        
        June-1-2014: \n
            -Added charting/datalogging. \n
            -Added BAR units to pressure gauges. \n
            -Fixed random error when disconnecting. \n
            -Fixed gauge resolution. \n
            -Fixed text fill on tablets. \n\n
        
        May-06-2014: \n
        	-Fixed data parse error. \n
        	-Fixed disconnect error. \n
        	-Known error with Galaxy S3 when disconnecting. \n\n
        
        Mar-14-2014: \n
        	-Fixed error when disconnecting. \n
        	-Updated max-reset functionality. \n
        	-Updated logo. \n
        	-Updated title bar. \n
        	-Fixed border on single gauge view. \n\n
        	
        
        Oct-27-2013: \n
           - Added landscape layout for two gauge view. \n
           - Added voltmeter support. \n
           - Better background processing. \n
           - Added vacuum \n
           - Updated tablet support. \n\n
           
        Aug-26-2013: \n
           - Added gauge resolution setting. \n
           - Fixed small bugs. \n\n
        
        Jun-23-2013: \n
   		   - Fixed multi-threading issue. \n\n
   		   
        Jun-16-2013: \n
   		   - Better background data processing. \n\n
   		   
        Mar-30-2013: \n
   		   - Added two gauge display and config. \n
   		   - Added four gauge display. \n\n
   		   
   		Mar-17-2013: \n
   		   - Fixed Nexus 7 layout bug \n\n
   		   
   		Dec-5-2012: \n
   		   - Moved firmware to 10 bit support \n\n
   		   
   		Nov-11-2012: \n
   		   - Fixed force close when passing BT object between views while connecting \n\n
   		   
   		Oct-5-2012: \n
   		   - Initial release</string>

</resources>