<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout style="@style/TitleBar">
        <TextView 
            android:id="@+id/title_text"
            android:text="Chariot"
            android:gravity="center"
            style="@style/TitleBarText_name" />
        
        <TextView 
            android:id="@+id/title_text_2"
            android:text="Gauge"
            android:gravity="center|left"
            style="@style/TitleBarText_name" /> 

            
       <ImageView
            android:id="@+id/connection_status_image"
            android:src="@drawable/bluetooth_disconnected"
            style="@style/TitleBarText" 
            android:layout_gravity="center_vertical"/> 
        
	</LinearLayout>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:padding="6dip">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
        <Button android:id="@+id/connectBtn"
            style="@style/DashboardButton"
            android:onClick="onClickActivity"
            android:text="@string/connect_title"
            android:drawableTop="@drawable/bluetooth_logo"/>
        
        <Button android:id="@+id/settingsBtn"
            style="@style/DashboardButton"
            android:onClick="onClickActivity"
            android:text="@string/settings_title"
            android:drawableTop="@drawable/settings_logo"/>
        
    </LinearLayout>

<View 
    android:id="@+id/line"
    android:layout_width="fill_parent"
    android:layout_height="2px"
    android:background="@drawable/divider" />        
        
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
        <Button android:id="@+id/widebandBtn"
            style="@style/DashboardButton"
            android:onClick="onClickActivity"
            android:text="@string/wideband_title"
            android:drawableTop="@drawable/wideband_logo"/>
        
        <Button android:id="@+id/boostBtn"
            style="@style/DashboardButton"
            android:onClick="onClickActivity"
            android:text="@string/boost_title"
            android:drawableTop="@drawable/boost_logo"/>
        
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
        <Button android:id="@+id/oilBtn"
            style="@style/DashboardButton"
            android:onClick="onClickActivity"
            android:text="@string/oil_title"
            android:drawableTop="@drawable/oil_logo"/>
        
        <Button android:id="@+id/customBtn"
            style="@style/DashboardButton"
            android:onClick="onClickActivity"
            android:text="@string/temperature_title"
            android:drawableTop="@drawable/custom_logo"/>
        
    </LinearLayout>

</LinearLayout>

</LinearLayout>
